# polymarket-rs

./: Cargo.toml
src/: main.rs
src/models/: market.rs  order.rs  request.rs
src/routes/: create_market_order.rs  get_orderbook.rs  mod.rs  signin.rs  signup.rs
src/utils/: hash.rs  mod.rs  order.rs
src/worker/: mod.rs  processor.rs
tests/: test.rs
