[package]
name = "exchange_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
oneshot = "0.1.11"
serde = "1.0.228"
tokio = { version = "1", features = ["full"] }
bcrypt = "0.15"
nanoid = "0.4.0"
chrono = {version = "0.4.42" , features = ["serde"]}
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
